format NetworkType.cs

--- a/WalletLogin/appsettings.json
+++ b/WalletLogin/appsettings.json
@@ -1,6 +1,6 @@
 {
-  "MetaMaskPassword": "123456",
-  "OKXPassword": "123456",
+  "MetaMaskPassword": "LoveYouWeiWei0907!",
+  "OKXPassword": "FuckYouXiJinPing!0615",
   "WalletAdress": "chrome-extension://nkbihfbeogaeaoehlefnkodbefgpgknn/home.html",
   "NetworkType": "Taiko",
   "AutoPay": "1"
