更新配置文件 功能

--- a/WalletLogin/appsettings.json
+++ b/WalletLogin/appsettings.json
@@ -2,7 +2,7 @@
   "MetaMaskPassword": "123456",
   "OKXPassword": "123456",
   "WalletAdress": "chrome-extension://nkbihfbeogaeaoehlefnkodbefgpgknn/home.html",
-  "NetworkType": "zkSync",
+  "NetworkType": "Op",
   "AutoPay": "1",
   "GasLevel": "0"
 }
