新增OKX钱包登录功能 修改Metamask通用功能，扩展可指定钱包页面功能

--- a/WalletLogin/appsettings.json
+++ b/WalletLogin/appsettings.json
@@ -1,9 +1,12 @@
 {
   "MetaMaskPassword": "123456",
   "OKXPassword": "123456",
-  "WalletAdress": "chrome-extension://nkbihfbeogaeaoehlefnkodbefgpgknn/home.html",
+  "MetamaskWalletAdress": "chrome-extension://nkbihfbeogaeaoehlefnkodbefgpgknn/home.html",
+  "OKXWalletAdress": "chrome-extension://mcohilncbfahbmgdjkbpemcciiolgcge/notification.html",
   "NetworkType": "Op",
   "AutoPay": "1",
-  "GasLevel": "0"
+  "GasLevel": "0",
+  //"Wallet": "Metamask"
+  "Wallet": "OKX"
 }
 
