更新OKX钱包功能2.95.0

--- a/WalletLogin/appsettings.json
+++ b/WalletLogin/appsettings.json
@@ -1,6 +1,6 @@
 {
-  "MetaMaskPassword": "123456",
-  "OKXPassword": "123456",
+  "MetaMaskPassword": "",
+  "OKXPassword": "",
   "MetamaskWalletAdress": "chrome-extension://nkbihfbeogaeaoehlefnkodbefgpgknn/home.html",
   "OKXWalletAdress": "chrome-extension://mcohilncbfahbmgdjkbpemcciiolgcge/notification.html",
   "NetworkType": "Op",
